Add /voters endpoints to use swagger runner interface
